test/errors/assert/while.yasl

while true {

    assert false
    echo 2
}
